clang/test/CXX/cpp/cpp.include/p3.cpp
// RUN: %clang_cc1 %s -fsyntax-only -verify

#define FOO foo>
#include <:FOO
// expected-error@-1 {{expected "FILENAME" or <FILENAME>}}
